<resources>
    <string name="app_name">Recipe Book</string>
    <string name="welcome_splash">Welcome, To our Recipes App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_txt">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login_register_button">Register</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="category_str">Type : %1$s </string>
    <string name="area_str">Area : %1$s </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="bottom_nav_home">Home</string>
    <string name="category_area_str"> %1$s || %2$s </string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="options_menu_sign_out">Sign Out</string>
    <string name="options_menu_about_us">About Us</string>
    <string name="login">LOGIN</string>
    <string name="no_matches_found">No Matches Found</string>
    <string name="nothing_to_see_here">Nothing to See Here</string>
    <string name="our_daily_recipe">Recipe Of The Day</string>
    <string name="our_recipes">Recipes For You</string>
    <string name="category_label">Type :</string>
    <string name="area_label">Area :</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="role_developer">Developer</string>
    <string name="alaa_info">Bachelor of Computer and Systems Engineering, Ain Shams University (ASU), 2020 - July 2025</string>
    <string name="app_info">This application make cooking easier, faster, and more convenient. In fact, such an app is a faithful assistant in the kitchen, a kind of digital scullion. It\'s a mini- cook willing to help you with advice.It offers you useful cooking content and help you improve your culinary skills.</string>
    <string name="app_info_2">Introducing "Recipe Book" - the ultimate recipe app for food lovers. Discover, favorite, and explore delicious meals from around the world with ease. Browse captivating recipes, complete with mouthwatering images and detailed instructions. Personalize your experience by saving your favorite dishes for future reference. Get inspired and create culinary masterpieces with Recipe Book, your go-to app for all things tasty and tantalizing.</string>

</resources>